[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buttons.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Base/PeaberryBase.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Map/Background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Main Menu" type="Node"]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="Rows" type="VBoxContainer" parent="CenterContainer"]
margin_left = 228.0
margin_top = 495.0
margin_right = 492.0
margin_bottom = 785.0
custom_constants/separation = 64

[node name="PlayButton" type="Button" parent="CenterContainer/Rows"]
margin_right = 264.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Play"
script = ExtResource( 1 )

[node name="SettingsButton" type="Button" parent="CenterContainer/Rows"]
margin_top = 118.0
margin_right = 264.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 1 )
text = " Settings "
script = ExtResource( 1 )

[node name="QuitButton" type="Button" parent="CenterContainer/Rows"]
margin_top = 236.0
margin_right = 264.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 360, 640 )
z_index = -1
texture = ExtResource( 3 )

[connection signal="pressed" from="CenterContainer/Rows/PlayButton" to="CenterContainer/Rows/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/Rows/SettingsButton" to="CenterContainer/Rows/SettingsButton" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenterContainer/Rows/QuitButton" to="CenterContainer/Rows/QuitButton" method="_on_QuitButton_pressed"]
